Add navigation with styling

--- a/HTML & CSS/Exam Preparation/Wirework/index.html
+++ b/HTML & CSS/Exam Preparation/Wirework/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
     <div class="container">
-        
+        <header>
+            <nav>
+                <div class="logo">
+                    <h2>WIREWORK</h2>
+                    <hr>
+                    <p>BY TEMPLATED</p>
+                </div>
+                <div class="navigation">
+                    <ul>
+                        <li>HOMEPAGE</li>
+                        <li>OUR CLIENTS</li>
+                        <li>ABOUT US</li>
+                        <li>CAREERS</li>
+                        <li>CONTACT US</li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     </div>
 </body>
 </html>
