--- a/HTML & CSS/Exam Preparation/Wirework/index.html
+++ b/HTML & CSS/Exam Preparation/Wirework/index.html
@@ -26,6 +26,9 @@
                 </div>
             </nav>
         </header>
+        <main>
+            <div class="banner"><img src="images/banner.jpg" alt=""></div>
+        </main>
     </div>
 </body>
 </html>
