--- a/HTML & CSS/Exam Preparation/Wirework/index.html
+++ b/HTML & CSS/Exam Preparation/Wirework/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Wirework</title>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -28,7 +31,37 @@
         </header>
         <main>
             <div class="banner"><img src="images/banner.jpg" alt=""></div>
+            <div class="about">
+                <p>This is Wirework, a free, fully standards-compliant CSS template designed by <span>TEMPLATED</span>.
+                    The photos in this template are from <span>Fotogrph</span>. This free template is released under the <span>Creative
+                    Commons Attribution</span> license, so you're pretty much free to do whatever you want with it (even use it
+                    commercially) provided you give us credit for it. Have fun :)
+                </p>
+            </div>
+            <div class="cards-holder">
+                <div class="card">
+                    <i class="fa-solid fa-key fa-2xl" style="color: #ffffff;"></i>
+                    <p class="title">Maecenas lectus sapien</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-scale-unbalanced-flip fa-2xl" style="color: #ffffff;"></i>
+                    <p class="title">Praesent scelerisque</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-unlock-keyhole fa-2xl" style="color: #ffffff;"></i>
+                    <p class="title">Fusce ultrices fringilla</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-wrench fa-2xl" style="color: #ffffff;"></i>
+                    <p class="title">Etiam posuere augue</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </div>
+            </div>
         </main>
     </div>
 </body>
+
 </html>
