Add footer & finish project

--- a/HTML & CSS/Exam Preparation/Wirework/index.html
+++ b/HTML & CSS/Exam Preparation/Wirework/index.html
@@ -33,8 +33,10 @@
             <div class="banner"><img src="images/banner.jpg" alt=""></div>
             <div class="about">
                 <p>This is Wirework, a free, fully standards-compliant CSS template designed by <span>TEMPLATED</span>.
-                    The photos in this template are from <span>Fotogrph</span>. This free template is released under the <span>Creative
-                    Commons Attribution</span> license, so you're pretty much free to do whatever you want with it (even use it
+                    The photos in this template are from <span>Fotogrph</span>. This free template is released under the
+                    <span>Creative
+                        Commons Attribution</span> license, so you're pretty much free to do whatever you want with it
+                    (even use it
                     commercially) provided you give us credit for it. Have fun :)
                 </p>
             </div>
@@ -42,22 +44,26 @@
                 <div class="card">
                     <i class="fa-solid fa-key fa-2xl" style="color: #ffffff;"></i>
                     <p class="title">Maecenas lectus sapien</p>
-                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque
+                        viverra vulputate enim. Aliquam erat volutpat.</p>
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-scale-unbalanced-flip fa-2xl" style="color: #ffffff;"></i>
                     <p class="title">Praesent scelerisque</p>
-                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque
+                        viverra vulputate enim. Aliquam erat volutpat.</p>
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-unlock-keyhole fa-2xl" style="color: #ffffff;"></i>
                     <p class="title">Fusce ultrices fringilla</p>
-                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque
+                        viverra vulputate enim. Aliquam erat volutpat.</p>
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-wrench fa-2xl" style="color: #ffffff;"></i>
                     <p class="title">Etiam posuere augue</p>
-                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                    <p class="description">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque
+                        viverra vulputate enim. Aliquam erat volutpat.</p>
                 </div>
             </div>
             <div class="subbanner">
@@ -67,7 +73,32 @@
                 </span>
                 <span><a href="#">ETIAM POSUERE</a></span>
             </div>
+            <div class="cards-holder site-map">
+                <div class="site-map-card">
+                    <h3>Maecenas lectus sapien</h3>
+                    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim.
+                        Aliquam erat volutpat.</p>
+                </div>
+                <div class="site-map-card">
+                    <h3>Praesent scelerisque</h3>
+                    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim.
+                        Aliquam erat volutpat.</p>
+                </div>
+                <div class="site-map-card">
+                    <h3>Fusce ultrices fringilla</h3>
+                    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim.
+                        Aliquam erat volutpat.</p>
+                </div>
+                <div class="site-map-card">
+                    <h3>Etiam posuere augue</h3>
+                    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim.
+                        Aliquam erat volutpat.</p>
+                </div>
+            </div>
         </main>
+        <footer>
+            <p>© UNTITLED. ALL RIGHTS RESERVED. | PHOTOS BY FOTOGRPH | DESIGN BY TEMPLATED.</p>
+        </footer>
     </div>
 </body>
 
