Add open to work section

--- a/HTML & CSS/Exam Preparation/LinkedIn/index.html
+++ b/HTML & CSS/Exam Preparation/LinkedIn/index.html
@@ -64,6 +64,15 @@
                 <h2>Post your job and find the people you need</h2>
                 <div class="post-job-button">Post a job</div>
             </div>
+            <div class="open-to-work">
+                <div class="open-to-work-description">
+                    <h2>Let the right people know you’re open to work</h2>
+                    <p>With the Open To Work feature, you can privately tell recruiters or publicly share with the LinkedIn community that you are looking for new job opportunities</p>
+                </div>
+                <div class="open-to-work-img">
+                    <img src="images/open-to-work.png" alt="">
+                </div>
+            </div>
         </main>
     </div>
 </body>
