--- a/HTML & CSS/Exam Preparation/LinkedIn/index.html
+++ b/HTML & CSS/Exam Preparation/LinkedIn/index.html
@@ -73,7 +73,58 @@
                     <img src="images/open-to-work.png" alt="">
                 </div>
             </div>
+            <div class="connect">
+                <div class="bullets-wrapper">
+                    <div class="bullet">
+                        <img src="images/connect.svg" alt="">
+                        <p>Connect with people who can help</p>
+                    </div>
+                    <div class="bullet">
+                        <img src="images/learn.svg" alt="">
+                        <p>Learn the skills that can help you now</p>
+                    </div>
+                </div>
+                <div class="post-job-button find-people">
+                    Find people you know
+                </div>
+            </div>
+            <div class="join">
+                <div class="background-img">
+                    <div><img src="images/background.svg" alt=""></div>
+                    <div class="join-content">
+                        <h2>Join your colleagues, classmates, and friends on LinkedIn.</h2>
+                        <div class="started-btn">Get started</div>
+                    </div>
+                </div>
+                
+            </div>
         </main>
+        <footer>
+            <div class="footer-content">
+                <img src="images/logo.svg" alt="" class="footer-logo">
+            </div>
+            <div class="footer-content">
+                <h5>General</h5>
+                <p>Sign Up</p>
+                <p>Help Center</p>
+                <p>About</p>
+            </div>
+            <div class="footer-content">
+                <h5>Browse LinkedIn</h5>
+                <p>Learning</p>
+                <p>Jobs</p>
+            </div>
+            <div class="footer-content">
+                <h5>Business Solutions</h5>
+                <p>Talent</p>
+            </div>
+            <div class="footer-content">
+                <h5>Directions</h5>
+                <p>Members</p>
+                <p>Jobs</p>
+                <p>Interview Prep</p>
+            </div>
+        </footer>
     </div>
 </body>
 
